<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_action_add_contact"
        android:title="@string/menu_create_contact_add"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/menu_action_add_reset"
        android:title="@string/menu_create_contact_reset"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item android:id="@+id/menu_action_dismiss"
        android:title="@string/menu_dismiss"
        android:orderInCategory="10"
        app:showAsAction="never" />
</menu>